# kerl-rs

./: .gitignore  Cargo.toml  README.md  bootstrap.sh  build.rs  memory.ld
.cargo/: config.toml
src/: clock.rs  init.rs  log.rs  main.rs  reset.rs
src/boot/: boot2.rs  mod.rs
src/conf/: rtt.rs
src/drivers/: i2c.rs  led.rs  mod.rs  rtt.rs  timer.rs
src/hw/: cpuid.rs  interrupts.rs  mod.rs
src/kernel/: log.rs  main.rs  mod.rs  task.rs
