[package]
name = "kerl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kerl"
path = "src/init.rs"

[dependencies]
rp2040_pac = { path = "rp2040_pac" }
rp2040-boot2 = { version = "0.2" }
log = "0.4.29"

[build-dependencies]
form = "0.13.0"
svd2rust = "0.37.1"

[profile.release]
opt-level = "z"
lto = true
